[package]
name = "circle-packing"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Circle Packing Problem Solver"
repository = "https://github.com/oovm/circle-packing"
documentation = "https://docs.rs/circle-packing"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.circle]
version = "0.1.*"
path = "../circle"


[dev-dependencies]

[features]
default = []
