[package]
name = "circle"
version = "0.1.9"
authors = ["Aster <192607617@qq.com>"]
description = "Circle Packing Problem Solver"
repository = "https://github.com/oovm/circle-packing"
documentation = "https://docs.rs/circle"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = ["f32"]
f32 = []
f64 = []