[package]
name = "circle"
version = "0.1.9"
authors = ["Aster <192607617@qq.com>"]
description = "Definition of circle and ellipse"
repository = "https://https://github.com/oovm/circle-packing/tree/master/projects/circle"
documentation = "https://docs.rs/circle"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.*", features = ["derive"], optional = true }

[dev-dependencies]

[features]
default = ["f32"]
f32 = []
f64 = []